// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoGridHeader render VideoGridHeader with title props empty string 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  />
</div>
`;

exports[`VideoGridHeader renders VideoGridHeader with dupa title 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  >
    duupa & dupa
  </span>
</div>
`;

exports[`VideoGridHeader renders component with no props 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  />
</div>
`;
